# monty

./: CLAUDE.md  Cargo.toml  Makefile  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml
crates/fuzz/: Cargo.toml
crates/monty/: Cargo.toml
crates/monty-bench/: Cargo.toml
crates/monty-cli/: Cargo.toml
crates/monty-datatest/: Cargo.toml
crates/monty-datatest/src/: main.rs
crates/monty-js/: Cargo.toml  package-lock.json  package.json
crates/monty-js/__test__/: external.spec.ts  wasm_external.spec.ts
crates/monty-js/ts/: errors.ts
crates/monty-pool/: Cargo.toml
crates/monty-proto/: Cargo.toml
crates/monty-python/: Cargo.toml
crates/monty-python/tests/: test_serialize.py
crates/monty-type-checking/: Cargo.toml
crates/monty-typeshed/: Cargo.toml
crates/monty/src/: exception_private.rs  fstring.rs  heap_data.rs  intern.rs  object.rs  parse.rs  value.rs
crates/monty/src/args/: bind_python.rs
crates/monty/src/builtins/: getattr.rs  print.rs  repr.rs
crates/monty/src/bytecode/: compiler.rs
crates/monty/src/bytecode/vm/: async_exec.rs  call.rs  exceptions.rs  format.rs  mod.rs  scheduler.rs
crates/monty/src/fs/: common.rs  overlay.rs
crates/monty/src/types/: bytes.rs  class.rs  dataclass.rs  date.rs  datetime.rs  dict.rs  dict_view.rs  file.rs  instance.rs  list.rs  mod.rs  namedtuple.rs  path.rs  py_trait.rs  range.rs  re_match.rs  re_pattern.rs  set.rs  slice.rs  str.rs  timedelta.rs  timezone.rs  tuple.rs
crates/monty/test_cases/: builtin__repr.py  class__type_errors.py  datetime__core.py  datetime__format.py  fstring__all.py  fstring__error_invalid_flags.py  fstring__pyformat.py
crates/monty/tests/: datetime_format.rs  fs.rs  parse_errors.rs  resource_limits.rs
limitations/: builtins.md  datetime.md  filesystem.md  format.md
