[package]
name = "monty-cli"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "monty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
monty = { workspace = true }
monty-proto = { workspace = true }
monty-type-checking = { workspace = true }
prost = { workspace = true }
rustyline = "15"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
